# pipeline_QTL

./: .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README.rst  README_substitution_vars.rst  TODO.rst  pipeline_QTL.ini  requirements.rst  requirements.txt  run_travis_tests.sh  setup.cfg  setup.py  substitution_vars.rst
docs/: Makefile  conf.py  index.rst  scripts.rst
installation/: Dockerfile  conda_packages.txt  environment.yml
pipeline_QTL/: PipelineQTL.py  __init__.py  pipeline_QTL.py  pipeline_QTL.py.bak  run_SVA.R
pipeline_QTL/configuration/: pipeline.yml
pipeline_QTL/configuration_pipeline_QTL/: conf.py
pipeline_QTL/downstream/: XGR_downstream_analysis_airwave.R
pipeline_QTL/genotype_tools/: update_IDs_plink_to_MatrixEQTL.R
pipeline_QTL/matrixQTL/: __init__.py  airwave_matrixeqtl_processing.R  bash_eQTL_plotting_airwave.sh  bash_qsub_mePipe_air.sh  eQTL_plotting_airwave.R  run_matrixEQTL.R  run_mePipe_air.R
pipeline_QTL/microarray/: 01_microarray_GEx_read_and_QC.R  02_microarray_GEx_normalisation.R  02a_microarray_GEx_normalisation_probe_filtering_sex.R  02b_microarray_GEx_pheno_file_processing.R  03_microarray_GEx_GAinS_diff_expr.R  03_microarray_GEx_diff_expression_no_covar.R  03a_microarray_GEx_diff_expression_covar.R  03b_microarray_GEx_diff_expression_quant_assoc.R  04_microarray_GEx_higher_level_analyses.R  qsub_R_01_microarray_GEx_read_and_QC.sh  qsub_R_02_microarray_GEx_normalisation.sh  qsub_R_02a_microarray_GEx_probe_filtering.sh  qsub_R_03_microarray_GEx_diff_expression.sh  (+2 more)
scripts/: prep_snpnexus.py
tests/: Covariates_ext.txt  GE_ext.txt  QTL_infiles.txt  README.txt  SNP_ext.txt  create_QTL_infiles.sh  ln_infiles.sh  plink_to_geno.sh  process_hapmap.sh  simulate_cont_var.py  simulate_plink.sh  test_setup.sh
(+55 files in other folders)
